# sh-nami

./: README.md  pyproject.toml
climatact/: main.py
climatact/data/: towns_with_coords.json
climatact/helper/: response_handler.py
climatact/middleware/: ip_filter.py  logging.py  setup.py
climatact/models/: models.py
climatact/services/: geo_service.py  weather_service.py
climatact/settings/: constants.py
data/: README.md  singapore_towns.csv  singapore_towns_with_coords.csv
scripts/: generate_town_coords.py
